<resources>
    <string name="app_name">帮排派</string>
    <string name="login_accound">手机号</string>
    <string name="login_pwd_phone">验证码</string>
    <string name="login_pwd_phone_get">获得验证码</string>
    <string name="login_pwd_phone_hint">输入验证码</string>
    <string name="login_pwd">密码</string>
    <string name="login_pwd_two">确认密码</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_passwrod_two_hint">请输入确认密码</string>
    <string name="register">注册</string>
    <string name="login_nickname">昵称</string>
    <string name="login_nickname_hint">请输入昵称</string>
    <string name="login_sex">性别</string>
    <string name="login_location">所在城市</string>
    <string name="login_location_hint">请输入所在城市</string>
    <string name="logout">退出登录</string>
    <string name="aboutme">关于</string>
    <string name="about_log">有什么建议或者意见，请联系778900559@qq.com</string>
    <string name="about_bt_sure">确定</string>
    <string name="main_queue">找人帮排队</string>
    <string name="main_ticket">找人帮取票</string>
    <string name="queue_location">地点</string>
    <string name="queue_timeChoice">选择时间段：</string>
    <string name="queue_time_start">选择开始时间</string>
    <string name="queue_time_end">选择结束时间</string>
    <string name="queue_thing">事件</string>
    <string name="queue_pay">报酬</string>
    <string name="queue_money">请输入金额</string>
    <string name="fui_time">时间段</string>
    <string name="fetch_phone">请输入注册时用的手机号</string>
    <string name="fetch_verify_code">6位验证码</string>
    <string name="fetch_send_code">发送验证码</string>
    <string name="fetch_new_pwd">新密码</string>
    <string name="fetch_new_pwd_hind">请输入新密码</string>
    <string name="fetch_reset_pwd">重置密码</string>
    <string name="revise">修改信息</string>
    <string name="revise_sure">确定更改信息</string>
</resources>
