<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f0f5">

    <LinearLayout style="@style/Register_Input">
        
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_accound"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:singleLine="true"
            android:hint="@string/login_username_hint"/>
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:text="@string/login_nickname"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_nickname"
            style="@style/Register_Edit"
            android:hint="@string/login_nickname_hint"/>
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_sex"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_Man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/btn_Woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_location"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_location"
            style="@style/Register_Edit"
            android:singleLine="true"
            android:hint="@string/login_location_hint"/>
    </LinearLayout>

    
    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd_phone"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_newpassword_phone"
            style="@style/Register_Edit"
            android:singleLine="true"
            android:hint="@string/login_pwd_phone_hint"/>
        <Button
            android:id="@+id/btn_getpwd_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/activity_register"
            android:text="@string/login_pwd_phone_get"
            android:textColor="@color/base_color_text_white"
            android:textSize="18dp"/>
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_newpassword"
            style="@style/Register_Edit"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/login_password_hint"/>
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd_two"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_mewpasssword_two"
            style="@style/Register_Edit"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/login_passwrod_two_hint"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/activity_register"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large"/>
</LinearLayout>
