<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_bg_color"
        android:gravity="center"
        android:text="找回密码"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_color_white"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_accound"
            android:textSize="16sp"
            android:textColor="#444444"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="#d2d2d2"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="phone"
            android:textColor="@color/fetch_font_color"
            android:hint="@string/fetch_phone"
            android:textColorHint="@color/main_font_color"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/bg_border_color_white"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="验证码"
                android:textSize="16sp"
                android:textColor="@color/fetch_font_color" />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/fetch_view_color"/>
            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/fetch_verify_code"
                android:inputType="number"
                android:textColor="@color/fetch_font_color"
                android:textColorHint="@color/main_font_color"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_logout_selector"
            android:textSize="14sp"
            android:text="@string/fetch_send_code"
            android:textColor="@color/base_color_text_white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_color_white"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetch_new_pwd"
            android:textColor="@color/fetch_font_color"
            android:textSize="16sp"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/fetch_view_color"/>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/fetch_new_pwd_hind"
            android:inputType="number"
            android:textColor="@color/fetch_font_color"
            android:textSize="16dp"
            android:textColorHint="@color/main_font_color"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_logout_selector"
        android:textColor="@color/base_color_text_white"
        android:textSize="16sp"
        android:text="@string/fetch_reset_pwd"/>
</LinearLayout>



















