<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical">
    <!--
    <include android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/login_accound"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_set_phone"
            style="@style/Smile.TextView._Black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/login_nickname"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            style='@style/Smile.TextView._Black'
            android:id="@+id/tv_set_nickname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:gravity="right|center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/login_sex"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            style='@style/Smile.TextView._Black'
            android:id="@+id/tv_set_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:gravity="right|center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_selector"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/login_location"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            style='@style/Smile.TextView._Black'
            android:id="@+id/tv_set_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:gravity="right|center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        style="@style/Smile.Button.logout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawable="@drawable/chat_send_button_bg"
        android:text="@string/aboutme"/>
</LinearLayout>
