<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/chat_send_button_bg"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/Register_Input">

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/login_nickname"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_queue_nickname"
                    style="@style/Register_Edit" />
            </LinearLayout>

            <LinearLayout style="@style/Register_Input">

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/queue_location"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                style="@style/Register_Input"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/queue_timeChoice"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_timeStart"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/activity_register"
                        android:text="@string/queue_time_start" />

                    <EditText
                        android:id="@+id/et_time_start"
                        style="@style/Register_Edit"
                        android:editable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_timeEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/activity_register"
                        android:text="@string/queue_time_end" />

                    <EditText
                        android:id="@+id/et_time_end"
                        style="@style/Register_Edit"
                        android:editable="false"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/Register_Input"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/queue_thing"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#CECEFF" />
            </LinearLayout>

            <LinearLayout
                style="@style/Register_Input"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Smile.TextView._Black"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/queue_pay"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbtn_money"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="自主协商" />
                        <RadioButton
                            android:id="@+id/rbtn_self"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="限定金额"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lin_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <TextView
                        style="@style/Smile.TextView._Black"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:text="@string/queue_money"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/queue_money"
                        style="@style/Register_Edit" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_queue_sure"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/activity_register"
                android:gravity="center|center_vertical"
                android:text="@string/about_bt_sure" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
