<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_border_color_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Smile.TextView._Black"
            android:text="@string/login_nickname"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/fetch_view_color"/>

        <EditText
            android:id="@+id/et_nickname_revise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_nickname_hint"
            android:textColor="@color/fetch_font_color"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_border_color_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Smile.TextView._Black"
            android:text="@string/login_sex"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/fetch_view_color"/>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_Man_revise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="男"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/btn_Woman_revise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_border_color_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Smile.TextView._Black"
            android:text="@string/login_location"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/fetch_view_color"/>

        <EditText
            android:id="@+id/et_location_revise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_location_hint"
            android:textColor="@color/fetch_font_color"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_revise_sure"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/activity_register"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/revise_sure"/>

</LinearLayout>
